doc: fix the gtkdoc generation
Signed-off-by: Víctor Manuel Jáquez Leal <vjaquez@igalia.com>

--- a/doc/reference/Makefile.am
+++ b/doc/reference/Makefile.am
@@ -22,14 +22,15 @@ DOC_MAIN_SGML_FILE=$(DOC_MODULE)-docs.sgml
 # gtk-doc will search all .c & .h files beneath here for inline comments
 # documenting the functions and macros.
 # e.g. DOC_SOURCE_DIR=../../../gtk
-DOC_SOURCE_DIR=$(top_srcdir)/src
+DOC_SOURCE_DIR=$(top_srcdir)/src \
+	$(top_srcdir)/libs/net
 
 # Extra options to pass to gtkdoc-scangobj. Not normally needed.
 SCANGOBJ_OPTIONS=
 
 # Extra options to supply to gtkdoc-scan.
 # e.g. SCAN_OPTIONS=--deprecated-guards="GTK_DISABLE_DEPRECATED"
-SCAN_OPTIONS=--source-dir=$(top_srcdir)/src
+SCAN_OPTIONS =
 
 # Extra options to supply to gtkdoc-mkdb.
 # e.g. MKDB_OPTIONS=--sgml-mode --output-format=xml
@@ -54,11 +55,11 @@ CFILE_GLOB=
 
 # Extra header to include when scanning, which are not under DOC_SOURCE_DIR
 # e.g. EXTRA_HFILES=$(top_srcdir}/contrib/extra.h
-EXTRA_HFILES=
+EXTRA_HFILES = $(top_srcdir)/libs/net/grl-net.h
 
 # Header files to ignore when scanning. Use base file name, no paths
 # e.g. IGNORE_HFILES=gtkdebug.h gtkintl.h
-IGNORE_HFILES=config.h \
+IGNORE_HFILES = config.h \
 	grl-media-plugin-priv.h \
 	grl-metadata-source-priv.h \
 	grl-sync-priv.h \
@@ -70,7 +71,8 @@ HTML_IMAGES=
 
 # Extra SGML files that are included by $(DOC_MAIN_SGML_FILE).
 # e.g. content_files=running.sgml building.sgml changes-2.0.sgml
-content_files=
+content_files = overview.xml	\
+	quick-start-using-grilo.xml
 
 # SGML files where gtk-doc abbrevations (#GtkWidget) are expanded
 # These files must be listed here *and* in content_files
@@ -82,8 +84,14 @@ expand_content_files=
 # signals and properties.
 # e.g. GTKDOC_CFLAGS=-I$(top_srcdir) -I$(top_builddir) $(GTK_DEBUG_FLAGS)
 # e.g. GTKDOC_LIBS=$(top_builddir)/gtk/$(gtktargetlib)
-GTKDOC_CFLAGS=-I$(top_srcdir)/src -I$(top_srcdir)/src/data $(DEPS_CFLAGS)
-GTKDOC_LIBS=$(top_builddir)/src/lib@GRL_NAME@.la $(DEPS_LIBS)
+GTKDOC_CFLAGS = -I$(top_srcdir)/src 	\
+	-I$(top_srcdir)/src/data 	\
+	-I$(top_srcdir)/libs/net	\
+	$(DEPS_CFLAGS)
+
+GTKDOC_LIBS = $(top_builddir)/src/lib@GRL_NAME@.la 		\
+	$(top_builddir)/libs/net/libgrlnet-@GRL_MAJORMINOR@.la 	\
+	$(DEPS_LIBS)
 
 # This includes the standard gtk-doc make rules, copied by gtkdocize.
 include $(top_srcdir)/gtk-doc.make
