vala: add grilo-net library bindings
Signed-off-by: Víctor Manuel Jáquez Leal <vjaquez@igalia.com>

--- a/bindings/vala/Makefile.am
+++ b/bindings/vala/Makefile.am
@@ -33,7 +33,7 @@
 # with distcheck).
 #
 
-targets = grilo-@GRL_MAJORMINOR@
+targets = grilo-@GRL_MAJORMINOR@ grilo-net-@GRL_MAJORMINOR@
 targets_u = $(foreach target,$(targets),$(subst @GRL_MAJORMINOR@,uninstalled,$(target)))
 
 # "source" files for vala-gen-introspect
