build: fix grilo-net building
If grilo-net dependencies are not found, it were still trying to build
grilo-net.

This patch fixes this problem.

Signed-off-by: Juan A. Suarez Romero <jasuarez@igalia.com>

--- a/Makefile.am
+++ b/Makefile.am
@@ -14,9 +14,11 @@ SUBDIRS += doc
 endif
 
 pkgconfigdir = $(libdir)/pkgconfig
-pkgconfig_DATA = 	\
-	grilo-0.1.pc	\
-	grilo-net-0.1.pc
+pkgconfig_DATA = grilo-0.1.pc
+
+if BUILD_GRILO_NET
+pkgconfig_DATA += grilo-net-0.1.pc
+endif
 
 MAINTAINERCLEANFILES = \
         aclocal.m4 \
