vala: remove deprecated --metadata parameter in vapigen
Signed-off-by: Víctor Manuel Jáquez Leal <vjaquez@igalia.com>

--- a/bindings/vala/Makefile.am
+++ b/bindings/vala/Makefile.am
@@ -66,7 +66,7 @@ endif
 
 %.vapi: %.gi %.metadata %-custom.vala
 	$(VAPIGEN) --library $* \
-		--metadata $(top_srcdir)/bindings/vala/$*.metadata $*.gi \
+		$(top_srcdir)/bindings/vala/$*.metadata $*.gi \
 		$*-custom.vala
 
 all: $(vapifiles)
