doc: rename reference directory to grilo
Because gtk-doc 1.14 does not support multiple source directories, the
reference subdirectory must be splitted in two: grilo core documentation and
grilo libraries documentation.

This commit rename the reference directory to grilo, where the core documentation
will be processed.

Signed-off-by: Víctor Manuel Jáquez Leal <vjaquez@igalia.com>

https://bugzilla.gnome.org/show_bug.cgi?id=636414

--- a/configure.ac
+++ b/configure.ac
@@ -247,7 +247,7 @@ AC_CONFIG_FILES([
   bindings/vala/grilo-net-uninstalled.files
   bindings/vala/grilo-net-uninstalled.namespace
   doc/Makefile
-  doc/reference/Makefile
+  doc/grilo/Makefile
 ])
 
 AC_OUTPUT
