core: Added grl-definitions.h
This header file will contain some system-wise definitions. At the moment
only GRL_PADDING used to pad public structures in Grilo.

--- a/src/Makefile.am
+++ b/src/Makefile.am
@@ -54,7 +54,8 @@ lib@GRL_NAME@inc_HEADERS =	\
 	grl-media-source.h	\
 	grl-log.h 		\
 	grl-multiple.h		\
-	grl-util.h
+	grl-util.h		\
+	grl-definitions.h
 
 data_h_headers =		\
 	data/grl-data.h		\
