--- a/configure.ac
+++ b/configure.ac
@@ -3,7 +3,7 @@
 # 
 # Author: Iago Toral Quiroga <itoral@igalia.com>
 #
-# Copyright (C) 2010 Igalia S.L.. All rights reserved.
+# Copyright (C) 2010, 2011 Igalia S.L.. All rights reserved.
 
 m4_define([prj_name],    [grilo])
 m4_define([prj_gir_name], [Grilo])
