--- a/debian/control
+++ b/debian/control
@@ -2,9 +2,9 @@ Source: grilo-0.1
 Section: libs
 Priority: extra
 Maintainer: Juan A. Suarez Romero <jasuarez@igalia.com>
-Build-Depends: cdbs, debhelper (>= 5), gnome-common, libvala-dev (>= 0.7.2),
+Build-Depends: cdbs, debhelper (>= 5), gnome-common, libvala-0.10-0 (>=0.10.0),
  valac (>= 0.7.2), gtk-doc-tools, libgirepository1.0-dev,
- gobject-introspection, libxml2-dev
+ gobject-introspection, libxml2-dev, libsoup2.4-dev
 Standards-Version: 3.7.2
 Homepage: http://gitorious.org/grilo
 
