--- a/grilo.spec.in
+++ b/grilo.spec.in
@@ -91,6 +91,15 @@ rm -rf $RPM_BUILD_ROOT
 %{_datadir}/vala/vapi/%{name}-@GRL_MAJORMINOR@.vapi
 
 %changelog
+* Fri May 07 2010 Juan A. Suarez Romero <jasuarez@igalia.com> - 0.1.5
+- General fixes
+- Added initial support for testing
+- Added new documentation: overview, quick start, examples, ...
+- Updated Vala bindings
+- Changed GrlConfig: now keys are strings instead of GrlKeyID
+- Improved build system
+- Added Vimeo plugin in Test UI
+
 * Fri Mar 12 2010 Juan A. Suarez Romero <jasuarez@igalia.com> - 0.1.4-1
 - Improved code and documentation
 - New API to configure plugins and sources
