Update debian files

--- a/debian/rules
+++ b/debian/rules
@@ -11,5 +11,5 @@ DEB_CONFIGURE_SCRIPT := ./autogen.sh
 DEB_CONFIGURE_EXTRA_FLAGS :=	\
 	--enable-vala		\
 	--enable-gtk-doc	\
-	--enable-introspection
-
+	--enable-introspection	\
+	--disable-tests
