build: Include new files in EXTRA_DIST.
Signed-off-by: Juan A. Suarez Romero <jasuarez@igalia.com>

--- a/src/Makefile.am
+++ b/src/Makefile.am
@@ -95,6 +95,11 @@ noinst_HEADERS =			\
 	grl-type-builtins.h		\
 	grl-marshal.h
 
+EXTRA_DIST =				\
+	grl-marshal.list		\
+	grl-type-builtins.h.template	\
+	grl-type-builtins.c.template
+
 MAINTAINERCLEANFILES =	\
 	*.in		\
 	*~
