--- a/debian/rules
+++ b/debian/rules
@@ -12,4 +12,5 @@ DEB_CONFIGURE_EXTRA_FLAGS :=	\
 	--enable-vala		\
 	--enable-gtk-doc	\
 	--enable-introspection	\
+	--enable-grl-net	\
 	--disable-tests
