--- a/libs/net/Makefile.am
+++ b/libs/net/Makefile.am
@@ -5,6 +5,7 @@
 #
 # Copyright (C) 2010 Igalia S.L. All rights reserved.
 
+
 lib_LTLIBRARIES = libgrlnet-@GRL_MAJORMINOR@.la
 noinst_PROGRAMS = wc-test
 
@@ -19,6 +20,11 @@ libgrlnet_@GRL_MAJORMINOR@_la_CFLAGS =	\
 	-I $(top_srcdir)/src/data	\
 	$(DEPS_CFLAGS)			\
 	$(NET_CFLAGS)
+
+if BUILD_GRILO_NET_WITH_CACHE
+libgrlnet_@GRL_MAJORMINOR@_la_CFLAGS += \
+	-DLIBSOUP_WITH_CACHE
+endif
 
 libgrlnet_@GRL_MAJORMINOR@_la_LIBADD =	\
 	$(top_builddir)/src/lib@GRL_NAME@.la	\
