--- a/grilo.spec.in
+++ b/grilo.spec.in
@@ -103,6 +103,10 @@ rm -rf $RPM_BUILD_ROOT
 %{_datadir}/vala-0.10/vapi/*
 
 %changelog
+* Thu Mar 17 2011 Juan A. Suarez Romero <jasuarez@igalia.com> - 0.1.11-1
+- Fixed a segmentation fault
+- Added new keys
+
 * Fri Mar 04 2011 Juan A. Suarez Romero <jasuarez@igalia.com> - 0.1.10-1
 - Several fixes
 - Deprecated grl_metadata_source_key_depends() in benefit of grl_metadata_source_may_resolve()
