--- a/debian/control.in
+++ b/debian/control.in
@@ -4,7 +4,8 @@ Priority: extra
 Maintainer: Juan A. Suarez Romero <jasuarez@igalia.com>
 Build-Depends: cdbs, debhelper (>= 5), gnome-common,
  libvala-0.10-dev (>= 0.7.2), valac (>= 0.7.2), gtk-doc-tools,
- libgirepository1.0-dev,  gobject-introspection, libxml2-dev, libsoup2.4-dev
+ libgirepository1.0-dev (>= 0.9.0),  gobject-introspection (>= 0.9.0),
+ libxml2-dev, libsoup2.4-dev
 Standards-Version: 3.7.2
 Homepage: http://gitorious.org/grilo
 
