--- a/grilo.spec.in
+++ b/grilo.spec.in
@@ -12,7 +12,7 @@ BuildRequires:  gnome-common
 BuildRequires:  vala-devel >= 0.7.2
 BuildRequires:  vala-tools >= 0.7.2
 BuildRequires:  gtk-doc
-BuildRequires:  gobject-introspection-devel
+BuildRequires:  gobject-introspection-devel >= 0.9.0
 BuildRequires:  libxml2-devel
 BuildRequires:  libsoup-devel
 #Requires:
@@ -103,6 +103,12 @@ rm -rf $RPM_BUILD_ROOT
 %{_datadir}/vala-0.10/vapi/*
 
 %changelog
+* Wed Mar 30 2011 Juan A. Suarez Romero <jasuarez@igalia.com> - 0.1.12-1
+- Several fixes and improvements, including fixes for: BGO#645542 - grl_metadata_source_set_metadata() broken
+- Added support for caching in GrlNet
+- Added new metadata keys suited for camera pictures
+- Improved GObject Introspection support
+
 * Thu Mar 17 2011 Juan A. Suarez Romero <jasuarez@igalia.com> - 0.1.11-1
 - Fixed a segmentation fault
 - Added new keys
