core: Redesign source/plugin hierarchy
Previously, hierarchy was:

      +----------------+
      | GrlMediaPlugin |
      +-------.--------+
             /_\
              |
    +-------------------+
    | GrlMetadataSource |
    +---------.---------+
             /_\
              |
      +----------------+
      | GrlMediaSource |
      +----------------+

With the redesign, we have the new hierarchy:

    +-----------+        +-----------+
    | GrlPlugin |<>-----*| GrlSource |
    +-----------+        +-----.-----+
                              /_\
                               |
                  +------------+----------+
                  |                       |
        +-------------------+    +----------------+
        | GrlMetadataSource |    | GrlMediaSource |
        +-------------------+    +----------------+

Signed-off-by: Juan A. Suarez Romero <jasuarez@igalia.com>

--- a/bindings/vala/grilo-uninstalled.files.in
+++ b/bindings/vala/grilo-uninstalled.files.in
@@ -1,7 +1,8 @@
 @top_builddir@/src/grilo.h
 @top_builddir@/src/grl-error.h
 @top_builddir@/src/grl-log.h
-@top_builddir@/src/grl-media-plugin.h
+@top_builddir@/src/grl-plugin.h
+@top_builddir@/src/grl-source.h
 @top_builddir@/src/grl-media-source.h
 @top_builddir@/src/grl-metadata-key.h
 @top_builddir@/src/grl-caps.h
