build: Really require gtk+-3.0
Check that available gtk+-3.0 package is really >= 3.0

Signed-off-by: Juan A. Suarez Romero <jasuarez@igalia.com>

--- a/configure.ac
+++ b/configure.ac
@@ -105,7 +105,7 @@ AC_SUBST(GLIB_MKENUMS)
 # ----------------------------------------------------------
 
 gtkver="gtk+-3.0"
-PKG_CHECK_EXISTS([gtk+-3.0], [gtkver="gtk+-3.0"], [gtkver="gtk+-2.0"])
+PKG_CHECK_EXISTS([gtk+-3.0 >= 3.0], [gtkver="gtk+-3.0"], [gtkver="gtk+-2.0"])
 
 PKG_CHECK_MODULES([GTU], [ ${gtkver} ],
                        [ BUILD_GRILO_TEST_UI=yes ],
