doc: Split code examples from documentation
Put examples in a separated directory, so user can easily compile them, and
embed those files in the documentation.

Signed-off-by: Juan A. Suarez Romero <jasuarez@igalia.com>

--- a/Makefile.am
+++ b/Makefile.am
@@ -7,7 +7,7 @@
 
 ACLOCAL_AMFLAGS = -I m4
 
-SUBDIRS = src libs bindings tools
+SUBDIRS = src libs bindings tools examples
 
 if ENABLE_TESTS
 SUBDIRS += tests
