doc: Added a chapter on plugin development.

--- a/doc/grilo/Makefile.am
+++ b/doc/grilo/Makefile.am
@@ -73,7 +73,10 @@ HTML_IMAGES=
 # Extra SGML files that are included by $(DOC_MAIN_SGML_FILE).
 # e.g. content_files=running.sgml building.sgml changes-2.0.sgml
 content_files=overview.xml	\
-	quick-start-using-grilo.xml
+	quick-start-using-grilo.xml \
+	quick-start-plugins-media-sources.xml \
+	quick-start-plugins-metadata-sources.xml \
+	quick-start-plugins-testing.xml
 
 # SGML files where gtk-doc abbrevations (#GtkWidget) are expanded
 # These files must be listed here *and* in content_files
