core: introduce grilo operations
There are several ways to make requests on grilo at the moment. You
can either use the MediaSource API (to find medias) or the
MetadataSource API (to find metadatas) or the Multiple API (to find
medias on a set of media sources). Currently MediaSource and
MetadataSource share the same API to cancel an operation, but the
Multiple API remains different.

This patch proposes to unify all the operations and allocate their ids
at only one place. This benefits the user by making the whole API
simpler (you no longer have to remember to how to cancel your
operation, there is only one way to do it).

This other advantage of this patch is to have a centralized place
where to find all the ongoing operations (that led to fix a memory
leak earlier), in the future that could help to debug stalled
operations.

Signed-off-by: Lionel Landwerlin <lionel.g.landwerlin@linux.intel.com>
Signed-off-by: Juan A. Suarez Romero <jasuarez@igalia.com>

--- a/src/Makefile.am
+++ b/src/Makefile.am
@@ -42,6 +42,7 @@ lib@GRL_NAME@_la_SOURCES =					\
 	grl-plugin-registry.c					\
 	grl-metadata-key.c grl-metadata-key-priv.h		\
 	grl-metadata-source.c grl-metadata-source-priv.h	\
+	grl-operation.c grl-operation.h				\
 	grl-type-builtins.c grl-type-builtins.h			\
 	grl-marshal.c grl-marshal.h				\
 	grl-media-source.c grl-util.c				\
@@ -76,7 +77,8 @@ lib@GRL_NAME@inc_HEADERS =	\
 	grl-log.h 		\
 	grl-multiple.h		\
 	grl-util.h		\
-	grl-definitions.h
+	grl-definitions.h	\
+	grl-operation.h
 
 data_h_headers =		\
 	data/grl-data.h		\
@@ -94,6 +96,7 @@ noinst_HEADERS =			\
 	grl-media-plugin-priv.h		\
 	grl-metadata-source-priv.h	\
 	grl-metadata-key-priv.h		\
+	grl-operation-priv.h		\
 	grl-sync-priv.h			\
 	grl-type-builtins.h		\
 	grl-marshal.h
