doc: Add manpage for grl-inspect
Signed-off-by: Iago Toral Quiroga <itoral@igalia.com>

--- a/Makefile.am
+++ b/Makefile.am
@@ -24,6 +24,8 @@ if BUILD_GRILO_NET
 pkgconfig_DATA += grilo-net-0.1.pc
 endif
 
+man1_MANS = grl-inspect.1
+
 MAINTAINERCLEANFILES = \
         aclocal.m4 \
         compile \
