--- a/grilo.spec.in
+++ b/grilo.spec.in
@@ -81,6 +81,7 @@ rm -rf $RPM_BUILD_ROOT
 %{_libdir}/*.so.*
 %{_libdir}/girepository-1.0/*.typelib
 %{_bindir}/grl-inspect
+%{_mandir}/man1/grl-inspect.1.gz
 
 %files devel
 %defattr(-,root,root,-)
@@ -100,9 +101,18 @@ rm -rf $RPM_BUILD_ROOT
 %files vala
 %defattr(-,root,root,-)
 %doc AUTHORS COPYING NEWS README TODO
-%{_datadir}/vala-0.10/vapi/*
+%{_datadir}/vala-0.12/vapi/*
 
 %changelog
+* Mon Aug 01 2011 Juan A. Suarez Romero <jasuarez@igalia.com> - 0.1.16-1
+- Several fixes
+- Minor improvements in build system
+- Make Test UI compliant with Gtk+ 3.0
+- Test UI no more long needs GConf
+- Lots of updates in documentation
+- Added manpage for grl-inspect tool
+- Added new API to handle operation cancellation
+
 * Wed Apr 20 2011 Juan A. Suarez Romero <jasuarez@igalia.com> - 0.1.15-1
 - Several fixes
 - Updated documentation
