--- a/bindings/vala/grilo-uninstalled.files.in
+++ b/bindings/vala/grilo-uninstalled.files.in
@@ -4,6 +4,8 @@
 @top_builddir@/src/grl-media-plugin.h
 @top_builddir@/src/grl-media-source.h
 @top_builddir@/src/grl-metadata-key.h
+@top_builddir@/src/grl-caps.h
+@top_builddir@/src/grl-operation-options.h
 @top_builddir@/src/grl-metadata-source.h
 @top_builddir@/src/grl-multiple.h
 @top_builddir@/src/grl-plugin-registry.h
