build: conditional creation of grl-net.pc files
If libsoup is not available, then the grl-net library will not be built. Hence
we shall not create the grl-net.pc files. Otherwise we will compile plugins
that will not be able to be loaded.

Signed-off-by: Víctor Manuel Jáquez Leal <vjaquez@igalia.com>

--- a/configure.ac
+++ b/configure.ac
@@ -253,12 +253,14 @@ AC_SUBST([builddir])
 # OUTPUT
 # ----------------------------------------------------------
 
+if test "x$HAVE_LIBSOUP" = "xyes"; then
+   AC_CONFIG_FILES([grilo-net-uninstalled.pc grilo-net-0.2.pc])
+fi
+
 AC_CONFIG_FILES([
   Makefile
   grilo-uninstalled.pc
   grilo-0.2.pc
-  grilo-net-uninstalled.pc
-  grilo-net-0.2.pc
   src/Makefile
   tests/Makefile
   tests/python/Makefile
