--- a/grilo.spec.in
+++ b/grilo.spec.in
@@ -99,9 +99,13 @@ rm -rf $RPM_BUILD_ROOT
 %files vala
 %defattr(-,root,root,-)
 %doc AUTHORS COPYING NEWS README TODO
-%{_datadir}/vala-0.12/vapi/*
+%{_datadir}/vala-0.14/vapi/*
 
 %changelog
+* Fri Dec 09 2011 Juan A. Suarez Romero <jasuarez@igalia.com> - 0.1.18-1
+- Added support for Windows building
+- Several fixes, including BGO#662762 - critical when HTTP request fails, BGO#662763 - Bad unref in grl-net
+
 * Mon Sep 05 2011 Juan A. Suarez Romero <jasuarez@igalia.com> - 0.1.17-1
 - Minor improvements in documentation
 - Well-manage end of search/browse in splitted sources
